--- a/Project.toml
+++ b/Project.toml
@@ -1,18 +1,17 @@
 name = "RegisterWorkerApertures"
 uuid = "f5ac0a76-2658-11e9-04c3-3fcaa17c41f6"
 authors = ["Tim Holy <tim.holy@gmail.com>"]
-version = "0.1.0"
+version = "0.2.0"
 
 [deps]
 CUDAdrv = "c5f51814-7f29-56b8-a69c-e4d8f6be1fde"
 CUDAnative = "be33ccc6-a3ff-5ff2-a52e-74243cff1e17"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
-Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 RegisterCore = "67712758-55e7-5c3c-8e85-dda1d7758434"
 RegisterDeformation = "c19381b7-cf49-59d7-881c-50dfbd227eaf"
-RegisterDriver = "935ac36e-2656-11e9-1e3b-cbaa636797af"
 RegisterFit = "36121b08-3789-5198-aff2-59a3443d9b59"
 RegisterMismatch = "3c0dd727-6833-5f5d-a1e8-c0d421935c74"
 RegisterMismatchCommon = "abb2e897-52bf-5d28-a379-6ca321e3b878"
@@ -24,14 +23,36 @@ SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+CUDAdrv = "5"
+CUDAnative = "2"
+CoordinateTransformations = "0.5"
+CuArrays = "1"
+ImageCore = "0.8.1"
+Interpolations = "0.12"
+RegisterCore = "0.2.2"
+RegisterDeformation = "0.3"
+RegisterDriver = "0.2.1"
+RegisterFit = "0.1"
+RegisterMismatch = "0.3"
+RegisterMismatchCommon = "0.2"
+RegisterMismatchCuda = "0.3"
+RegisterOptimize = "0.3"
+RegisterPenalty = "0.2"
+RegisterWorkerShell = "0.2"
+StaticArrays = "0.12"
 julia = "1.0"
 
 [extras]
+AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+ImageAxes = "2803e5a7-5153-5ecf-9a86-9b4c37f5f5ac"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+RegisterDriver = "935ac36e-2656-11e9-1e3b-cbaa636797af"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestImages = "5e47fb64-e119-507b-a336-dd2b206d9990"
 
 [targets]
-test = ["Test", "JLD", "ImageMagick", "TestImages", "Pkg"]
+test = ["Test", "AxisArrays", "Distributed", "ImageAxes", "ImageFiltering", "ImageMagick", "JLD", "Pkg", "RegisterDriver", "TestImages"]
