--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,15 @@ script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia -e 'using Pkg; pkg"registry add General https://github.com/HolyLab/HolyLabRegistry.git"'
   - julia -e 'using Pkg; Pkg.build(); Pkg.test(;coverage=true)'
-after_success:
-# update the documentation
-  - julia -e 'using Pkg; Pkg.add("Documenter")'
-  - julia -e 'using RegisterWorkerApertures; cd(dirname(dirname(pathof(RegisterWorkerApertures)))); ENV["DOCUMENTER_DEBUG"] = "true"; include(joinpath("docs", "make.jl"))'
+
+jobs:
+  include:
+    - stage: "Documentation"
+      julia: 1
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; pkg"registry add General https://github.com/HolyLab/HolyLabRegistry.git";
+                                               Pkg.develop(PackageSpec(path=pwd()));
+                                               Pkg.instantiate()'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
