--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 CUDAdrv = "5, 6"
 CUDAnative = "2"
 CoordinateTransformations = "0.5"
-CuArrays = "1"
+CuArrays = "1, 2"
 ImageCore = "0.8.1"
 Interpolations = "0.12"
 RegisterCore = "0.2.2"
