CompatHelper: bump compat for StaticArrays to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ RegisterMismatchCuda = "0.3"
 RegisterOptimize = "0.3"
 RegisterPenalty = "0.2"
 RegisterWorkerShell = "0.2"
-StaticArrays = "0.12"
+StaticArrays = "0.12, 1"
 julia = "1.0"
 
 [extras]
