--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 CUDAdrv = "5, 6"
-CUDAnative = "2"
+CUDAnative = "2, 3"
 CoordinateTransformations = "0.5"
 CuArrays = "1"
 ImageCore = "0.8.1"
