CompatHelper: bump compat for Interpolations to 0.13, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ CUDAnative = "2"
 CoordinateTransformations = "0.5"
 CuArrays = "1"
 ImageCore = "0.8.1"
-Interpolations = "0.12"
+Interpolations = "0.12, 0.13"
 RegisterCore = "0.2.2"
 RegisterDeformation = "0.3"
 RegisterDriver = "0.2.1"
