--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -11,7 +11,19 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
+        - name: Setup SSH Keys and known_hosts
+          env:
+              SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+          run: |
+              mkdir -p ~/.ssh
+              ssh-keyscan github.com >> ~/.ssh/known_hosts
+              ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+              ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
+        - name: registry_add
+          run: julia -e 'using Pkg; pkg"registry add General https://github.com/HolyLab/HolyLabRegistry.git"'
         - uses: julia-actions/julia-buildpkg@latest
+          env:
+            SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         - uses: julia-actions/julia-docdeploy@latest
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
