--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ CUDAdrv = "5, 6"
 CUDAnative = "2"
 CoordinateTransformations = "0.5"
 CuArrays = "1"
-ImageCore = "0.8.1"
+ImageCore = "0.8.1, 0.10"
 Interpolations = "0.12"
 RegisterCore = "0.2.2"
 RegisterDeformation = "0.3"
