--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,11 @@
 name = "RegisterWorkerApertures"
 uuid = "a0a6461a-57d1-11e9-363b-71a271cc5699"
 authors = ["Tim Holy <tim.holy@gmail.com>"]
-version = "0.2.2"
+version = "0.2.3"
 
 [deps]
-CUDAdrv = "c5f51814-7f29-56b8-a69c-e4d8f6be1fde"
-CUDAnative = "be33ccc6-a3ff-5ff2-a52e-74243cff1e17"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
-CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 RegisterCore = "67712758-55e7-5c3c-8e85-dda1d7758434"
@@ -24,24 +22,22 @@ SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-CUDAdrv = "5, 6"
-CUDAnative = "2"
-CoordinateTransformations = "0.5"
-CuArrays = "1"
-ImageCore = "0.8.1"
-Interpolations = "0.12"
+CoordinateTransformations = "0.5, 0.6"
+CUDA = "3, 4, 5"
+ImageCore = "0.8.1, 0.9, 0.10"
+Interpolations = "0.12, 0.13, 0.14, 0.15"
 RegisterCore = "0.2.2"
-RegisterDeformation = "0.3"
+RegisterDeformation = "0.3, 0.4"
 RegisterDriver = "0.2.1"
-RegisterFit = "0.1"
-RegisterMismatch = "0.3"
+RegisterFit = "0.1, 0.2"
+RegisterMismatch = "0.3, 0.4"
 RegisterMismatchCommon = "0.2"
 RegisterMismatchCuda = "0.3"
 RegisterOptimize = "0.3"
-RegisterPenalty = "0.2"
+RegisterPenalty = "0.2, 0.3"
 RegisterWorkerShell = "0.2"
-StaticArrays = "0.12"
-julia = "1.0"
+StaticArrays = "0.12, 1"
+julia = "1.10"
 
 [extras]
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
